--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
       "standard-with-typescript"
     ],
     "parserOptions": {
-      "project": "./tsconfig-eslint.json"
+      "project": "./tsconfig.json"
     },
     "rules": {
       "@typescript-eslint/consistent-type-definitions": "off",
