--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   }
