--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "es6",
+      "target": "es5",
       "lib": [
         "dom",
         "dom.iterable",
@@ -10,21 +10,15 @@
       "module": "esnext",
       "moduleResolution": "node",
       "jsx": "react",
-      "rootDirs": ["src", "tests"],
+      "rootDir": "src",
       "baseUrl": "src",
+      "allowJs": true,
       "skipLibCheck": true,
       "allowSyntheticDefaultImports": true,
-      "forceConsistentCasingInFileNames": true,
-      "isolatedModules": true,
-      "noEmit": true,
       "strict": true,
-      "paths": {
-        "@/*": ["*"],
-        "@/tests/*": ["../tests/*"]
-      },
-      "allowJs": true,
-      "resolveJsonModule": true
+      "forceConsistentCasingInFileNames": true,
+      "resolveJsonModule": true,
+      "noEmit": true
     },
-    "include": ["src", "tests"],
-    "exclude": ["tests/e2e/cypress"]
+    "include": ["src"]
   }
