chore: add faker lib

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "jest-environment-jsdom": "^29.6.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@types/faker": "^6.6.9",
+    "faker": "^6.6.6"
   }
 }
