--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@types/faker": "^6.6.9",
-    "faker": "^6.6.6"
+    "@faker-js/faker": "^8.0.2"
   }
 }
