--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "eslint": "^8.45.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
@@ -30,6 +32,8 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
