--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,22 @@
 {
+    "settings": {
+      "react":{
+        "version": "detect"
+      }
+    },
     "extends": [
-      "standard-with-typescript"
+      "standard-with-typescript",
+      "plugin:react/recommended"
     ],
+    "plugins": ["react"],
     "parserOptions": {
       "project": "./tsconfig.json"
     },
     "rules": {
       "@typescript-eslint/consistent-type-definitions": "off",
       "@typescript-eslint/strict-boolean-expressions": "off",
-      "@typescript-eslint/camelcase": "off"
+      "@typescript-eslint/camelcase": "off",
+      "react/jsx-uses-react": "error",
+      "react/jsx-uses-vars": "error"
     }
   }
